# Calibrate_Debate

./: .gitignore  README.md  balance_debate.json  bet_analysis_results.json  bet_analysis_results_private_informed.json  bet_analysis_results_public.json  config.py  debate_analysis_results.json  experiment.md  plan.md  pyproject.toml  results.md  sample_bet_debate.json  sample_bet_debate2.json  sample_debate_1.json  sample_debate_1_judge_anthropic_claude-3.5-sonnet_run_3.json  sample_debate_1_judge_deepseek_deepseek-chat_run_3.json  sample_debate_1_judge_qwen_qwen-max_run_1.json  sample_debate_1_judge_qwen_qwen-max_run_2.json  sample_debate_1_judge_qwen_qwen-max_run_3.json  sample_debate_2_judge_anthropic_claude-3.5-sonnet_run_3.json  sample_debate_2_judge_deepseek_deepseek-chat_run_2.json  sample_debate_2_judge_openai_o1-mini_run_1.json  sample_debate_2_judge_openai_o1-mini_run_2.json  sample_debate_2_judge_qwen_qwen-max_run_1.json  sample_debate_2_judge_qwen_qwen-max_run_3.json  sample_debate_3_judge_anthropic_claude-3.5-sonnet_run_3.json  sample_debate_3_judge_openai_chatgpt-4o-latest_run_2.json  sample_debate_3_judge_openai_chatgpt-4o-latest_run_3.json  sample_debate_3_judge_openai_o1-mini_run_2.json  sample_debate_3_judge_openai_o1-mini_run_3.json  sample_debate_3_judge_qwen_qwen-max_run_1.json  sample_debate_3_judge_qwen_qwen-max_run_2.json  test.md  test_debate_new.json
ai_models/: debate_models.json  judge_models.json  load_models.py
core/: api_client.py  debate.py  debate_service.py  judgement_processor.py  logger.py  message_formatter.py  models.py
(+221 files in other folders)
