[project]
name = "calibrate-debate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.3",
    "pydantic>=2.10.6",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
    "types-requests>=2.32.0.20241016",
]

[tool.pytest.ini_options]
pythonpath = ["."]
