[project]
name = "calibrate-debate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pingouin>=0.5.5",
    "pydantic>=2.10.6",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
    "tenacity>=9.0.0",
    "types-requests>=2.32.0.20241016",
]

[tool.pytest.ini_options]
pythonpath = ["."]
